--- a/output/abccare-proportion-summary-home.tex
+++ b/output/abccare-proportion-summary-home.tex
@@ -8,7 +8,7 @@ IQ & 15 & \textbf{1.000} & 0.533 & \textbf{-0.467} \\
 Achievement & 12 & \textbf{1.000} & \textbf{0.000} & \textbf{-1.000} \\
 Social-Emotional & 22 & 0.591 & \textbf{0.364} & \textbf{-0.227} \\
 Parenting & 7 & \textbf{1.000} & 0.286 & \textbf{-0.714} \\
-Parental Income & 15 & \textbf{0.800} & 0.733 & \textbf{-0.067} \\
+Parental Labor Income & 15 & \textbf{0.800} & 0.733 & \textbf{-0.067} \\
 Education & 9 & \textbf{0.667} & \textbf{0.111} & \textbf{-0.556} \\
 Employment & 4 & \textbf{1.000} & \textbf{0.750} & \textbf{-0.250} \\
 Crime & 4 & 0.500 & \textbf{0.000} & \textbf{-0.500} \\
