--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -1,4 +1,4 @@
-Differences in gender are central features of economic and social life. This paper investigates how participation in enriched early childhood programs affects the lives of disadvantaged boys and girls, and whether it promotes or reduces gender gaps. We show that on many outcomes low-quality childcare programs harm boys and contribute to gender gaps. This analysis sounds a cautionary note for advocates of early childcare in any form. Quality matters and low-quality programs can cause harm.
+Differences in gender are central features of economic and social life. This paper investigates how participation in enriched early childhood programs differentially affects the lives of disadvantaged boys and girls, and whether it promotes or reduces gender gaps. We show that, on many outcomes, low-quality childcare programs harm boys and contribute to gender gaps. This analysis sounds a cautionary note for advocates of early childcare in any form. Quality matters and low-quality programs can cause harm.
 
 There is a rich literature in psychology on the greater vulnerability of boys to adverse life conditions and the importance of fathers in the lives of boys.\footnote{See \citet{golding2016psychology}.} As a group, girls mature earlier, are more resilient to adversity, and perform better in a variety of life tasks.\footnote{See \citet{Schore_2017_IMHJ} for an informative overview of this literature. Economists have contributed to this literature. See, e.g., \citet{Bertrand_Pan_2013_AEJAE}, \citet{Autor-etal_2015_Family-Disadvantage} and \citet{Kottelenberg-Lehrer_2014_Gender-Effects}.} Less is known about effective strategies for reducing the vulnerability of boys to disadvantage.
 
@@ -10,9 +10,9 @@ There are positive impacts of the program across the life cycle for both genders
 
 Our analysis sheds light on recent claims about the harm caused by enrolling children in childcare programs. In an influential analysis, \citet{Baker_Gruber_etal_2008_JPE} show that participants in childcare manifest adverse behavioral outcomes. \citet{Kottelenberg-Lehrer_2014_Gender-Effects} localize their effects to boys.
 
-However, all childcare programs are not alike. We produce evidence that high-quality childcare greatly benefits boys relative to low-quality childcare. Staying at home is a better option for them, especially if the family environment is relatively advantaged (e.g. the father is present). This effect is not found for girls. The program analyzed by \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg-Lehrer_2014_Gender-Effects} is of relatively low quality compared to the enriched program we analyze.\footnote{The program they analyze was a modest payment (5-7 Canadian dollars a day) in the form of a voucher. The voucher component itself reduces received quality given information problems by parents.} There is no contradiction between the claim that low-quality programs impair child development, while high-quality programs do not. Boys are more vulnerable and respond adversely to low quality environments on many outcomes.
+However, all childcare programs are not alike. We produce evidence that high-quality childcare greatly benefits boys relative to low-quality childcare. Staying at home is a better option for them, especially if the family environment is relatively advantaged (e.g. the father is present). This effect is not found for girls. The program analyzed by \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg-Lehrer_2014_Gender-Effects} is of relatively low quality compared to the enriched program we analyze.\footnote{The program they analyze was a modest payment (between 5 and 7 Canadian dollars a day starting in 1997) in the form of a voucher. The voucher component itself reduces received quality given an information problem by parents. The full cost of the program was \$44 (2014) a day \citep{Baker_etal_2005_Universal_Childcare_NBER}. This is less than two thirds of the cost of ABC/CARE, which was close to \$75 (2014) a day \citep{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.} There is no contradiction between the claim that low-quality programs impair child development, while high-quality programs do not. Boys are more vulnerable and respond adversely to low-quality environments on many outcomes.
 
-Unlike previous studies, we estimate treatment effects comparing treatment group outcomes to different control groups: home care or care in low-quality centers.\footnote{Historical documentation, records, and evidence from knowledgeable individuals indicate that although the available alternative centers followed state and federal standards, they were of considerably lower quality than the ABC/CARE program. We document this in Appendix~\ref{app:control-subbb}.}$^,$\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.} We find that home care is beneficial for boys compared to low quality center childcare.
+Unlike previous studies, we estimate treatment effects comparing treatment group outcomes to different control groups: home care or care in low-quality centers.\footnote{Historical documentation, records, and evidence from knowledgeable individuals indicate that although the available alternative centers followed state and federal standards, they were of considerably lower quality than the ABC/CARE program. We document this in Appendix~\ref{app:control-subbb}.}$^,$\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.} We find that home care is beneficial for boys compared to low-quality center childcare.
 
 To preview our analysis, we present gender differences in outcomes in Table~\ref{tab:proportion-table-ranksign}. We report the proportion of outcomes, by category, for which males outperform females (we have multiple outcome measures in each category which we explain in greater detail below). These proportions are invariant to the scales used for individual measures. Under the null hypothesis of no difference in treatment effects by gender, the proportion of outcomes favoring any gender should be 50\%. We test this hypothesis for the control group and the treatment group separately to determine whether there is a baseline (control) gender difference and whether treatment affects this gender difference.
 
@@ -31,22 +31,24 @@ Control males have higher IQs, employment, enhanced parental labor income (throu
 \end{threeparttable}
 \end{table}
 
-Table~\ref{tab:proportion-table} summarizes the gender gaps reported in Table~\ref{tab:proportion-table-ranksign}, as well as those for different childcare environments for control-group children. In the control group, the proportion of outcomes for which males do better than females is higher than 50\% for most of the categories, although not all are statistically significant. Exceptions include social-emotional skills, risky behavior, and crime, in which females surpass males.\footnote{Females commit fewer crimes and report less risky behavior in comparison to males.} Treatment reverses the gaps for achievement, education, employment, parental income, and overall outcomes. For controls who stay at home, females have slightly better health outcomes than males. The males who attend lower-quality preschools do not outperform females on any of the outcome categories associated with cognition, education, and induced parental labor income (through subsidy of childcare). These outcomes are concentrated relatively early in the life of a child, indicating an early-life disadvantage that enriched early childcare programs partially correct.
+Table~\ref{tab:proportion-table} summarizes the gender gaps reported in Table~\ref{tab:proportion-table-ranksign}, as well as those for different childcare environments for control-group children. In the control group, the proportion of outcomes for which males do better than females is higher than 50\% for most of the categories, although not all are statistically significant. Exceptions include social-emotional skills, risky behavior, and crime, in which females surpass males.\footnote{Females commit fewer crimes and report less risky behavior in comparison to males.} Treatment reverses the gaps for achievement, education, employment, parental income, and overall outcomes. For controls who stay at home, females have slightly better health outcomes than males. The males who attend lower-quality childcare do not outperform females on any of the outcome categories associated with cognition, education, and induced parental labor income (through subsidy of childcare). These outcomes are concentrated relatively early in the life of a child, indicating an early-life disadvantage that enriched early childcare programs partially correct.
 
 \begin{table}[H]
 \centering
 \caption{Summary of Proportion of Outcomes Males $>$ Females by Home Status}
 \label{tab:proportion-table}
 \begin{threeparttable}
+\begin{footnotesize}
 \input{output/abccare-gendergaps-summarizingtable}
+\end{footnotesize}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table summarizes comparison of gender gaps across outcome categories by different groups. A checkmark indicates that the proportion of outcomes in the corresponding category is larger than 50\%, meaning that males outperform females. A checkmark with an asterisk indicates that the proportion is significantly larger than 50\% at the 10\% level. Column (1) is the difference between males and females in the full control group.  Column (2) is the difference between males and females in the control group only considering those who stayed at home. Column (3) is the difference between males and females in the control group only considering those who attended alternative preschools. Column (4) is the difference between males and females in the treatment group.
+\item Note: This table summarizes comparison of gender gaps across outcome categories by different groups. A checkmark indicates that the proportion of outcomes in the corresponding category is larger than 50\%, meaning that males outperform females. A checkmark with an asterisk indicates that the proportion is significantly larger than 50\% at the 10\% level. Column (1) is the difference between males and females in the full control group.  Column (2) is the difference between males and females in the control group only considering those who stayed at home. Column (3) is the difference between males and females in the control group only considering those who attended alternative childcare. Column (4) is the difference between males and females in the treatment group.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
 
-This paper unfolds in the following way. Section~\ref{sec:data} describes the experimental data we analyze and its special features. It documents that a considerable proportion of the control-group subjects attend lower-quality preschools compared to treatment subjects. Section~\ref{sec:parameters} defines the treatment effects we estimate and how we summarize them. Section~\ref{sec:treatment-effects} reports the treatment effects overall and by gender and establishes the existence of sharp gender differences for many categories of outcomes. Section~\ref{sec:gender-differences} discusses the sources of these differences. Section~\ref{sec:conclusion} concludes.
+This paper unfolds in the following way. Section~\ref{sec:data} describes the experimental data we analyze and its special features. It documents that a considerable proportion of the control-group subjects attend lower-quality childcare compared to treatment subjects. Section~\ref{sec:parameters} defines the treatment effects we estimate and how we summarize them. Section~\ref{sec:treatment-effects} reports the treatment effects overall and by gender and establishes the existence of sharp gender differences for many categories of outcomes. Section~\ref{sec:gender-differences} discusses the sources of these differences. Section~\ref{sec:conclusion} concludes.
 
 
 %ee \citet{Beeghly-etal_2017_IMHJ,Dayton_2017_IMHJ,Iruka_2017_IMHJ,Schore_2017_IMHJ} for recent findings on the topic of different development of males and females early in life. 
