--- a/sections/4_treatment-effects.tex
+++ b/sections/4_treatment-effects.tex
@@ -1,4 +1,4 @@
-This section reports estimates of treatment effects by gender for the main outcomes, tests of equality of effects by gender by outcome, and combining functions. These estimates show that the program treatment effects are strong for both males and females. Treatment effects depend on the counterfactual against which they are benchmarked (home or low-quality center-based care). Treatment effects differ sharply by gender.\footnote{See Appendix~\ref{appendix:bootstrap} for the exact procedure we use to conduct inference.}
+This section reports estimates of treatment effects by gender for the main outcomes, tests of equality of effects by gender by outcome, and combining functions. These estimates show that the program treatment effects are strong for both males and females. Treatment effects depend on the counterfactual against which they are benchmarked (home or low-quality center childcare). Treatment effects differ sharply by gender.\footnote{See Appendix~\ref{appendix:bootstrap} for the exact procedure we use to conduct inference.}
 
 \subsection{Estimated Treatment Effects}
 
@@ -39,7 +39,7 @@ $^*$For females, we do not report graduation from a four-years college because w
 
 The results for males are different from those for females. Treatment has substantial effects when compared to the next best alternative. The effects are positive for a variety of health indicators, including drug use and hypertension. The effects on employment and labor income are sizeable. The increase in employment at age 30 ranges from 11 to 19 percentage points. Labor income at age 30 increases between \$19,000 and \$24,000 (2014) after treatment. The effects strengthen when comparing treatment to low-quality childcare. Separation from the mother and being placed in relatively low-quality childcare centers has more deleterious consequences for males than for females.\footnote{This is consistent with the evidence in \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg-Lehrer_2014_Gender-Effects} and the analysis of \citet{golding2016psychology}.}
 
-The results hold when using other definitions of control substitution, which vary by exposure length. They remain statistically significant or are borderline statistically insignificant when computing two-tailed $p$-values (see Appendix~\ref{app:vsensitivity-twosided}). When using step-down $p$-values (see Appendix~\ref{appendix:results} for the full set of step-down $p$-values), the health results remain statistically significant for males, when compared to the full control group and when compared to alternative center-based childcare arrangements. The education results remain statistically significant for females, when compared to the full control group and when compared to those who stay at home.
+The results hold when using other definitions of control substitution, which vary by exposure length. They remain statistically significant or are borderline statistically insignificant when computing two-tailed $p$-values (see Appendix~\ref{app:vsensitivity-twosided}). When using step-down $p$-values (see Appendix~\ref{appendix:results} for the full set of step-down $p$-values), the health results remain statistically significant for males, when compared to the full control group and when compared to alternative center childcare. The education results remain statistically significant for females, when compared to the full control group and when compared to those who stay at home.
 
 The estimated effects for females and males in Columns (3) and (5) in their respective tables are not based on adjustments for baseline covariates (matching); the estimates in (4) and (6) are. In Appendix~\ref{appendix:bvariables}, we justify our choice of matching variables. We conduct a thorough analysis to conclude that there is little sensitivity to the choice of these variables.\footnote{We also present this sensitivity analysis changing the variables used to condition while estimating treatment effects and changing the variables used to construct the weights to account for attrition.}
 
@@ -67,13 +67,13 @@ Given the large number of outcomes measured in the numerous follow-ups, reportin
 
 In this section, we report treatment effects by category and the proportion of statistically significant effects. We use combining functions, which count the number of positive (and significant) treatment effects by gender. They indicate that females benefit more from the program than do males. We adjust for dependence across outcomes and for pretesting in constructing standard errors (see Appendix~\ref{appendix:methodology}).
 
-We find strong evidence of gender differences in education and employment. For females in comparison to alternative preschool, 40\% of the education outcomes and 20\% of the employment outcomes are positive and significant. These increase to 80\% and 100\% when compared to staying at home. The treatment advantage for males is only seen when compared to those males who attended alternative childcare centers. None of the education or employment outcomes are statistically significant and positive when compared to staying at home.
+We find strong evidence of gender differences in education and employment. For females in comparison to alternative childcare, 40\% of the education outcomes and 20\% of the employment outcomes are positive and significant. These increase to 80\% and 100\% when compared to staying at home. The treatment advantage for males is only seen when compared to those males who attended alternative childcare centers. None of the education or employment outcomes are statistically significant and positive when compared to staying at home.
 
-We test the hypothesis that the proportions are equal to 50\%. As Figure~\ref{fig:ppositive} shows that the proportions for both genders are statistically significantly greater than 50\%. The proportion is higher for females. When considering the proportion of outcomes that are both positive and statistically significant at the 10\% level, we test the hypothesis that the proportions are equal to 10\%.\footnote{Our inference accounts for the dependence across outcomes, as we explain in Section~\ref{sec:combining-functions} and Appendix~\ref{appendix:methodology}. Using an $\alpha$-level of significance, one would expect to find by chance that $\alpha\%$ of the treatment effects are ``statistically significant,'' even if the null hypothesis of no effect of the program is true.} A similar pattern holds for this test as well, although the proportions are smaller. Across outcomes, the effects are stronger for males when comparing treatment to alternative childcare, but are stronger for females when comparing treatment to staying at home. This pattern holds in the individual treatment effects, the combining functions, and the cost/benefit analysis of \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.
+We test the hypothesis that the proportions are equal to 50\%. Figure~\ref{fig:ppositive} shows that the proportions for both genders are statistically significantly greater than 50\%. The proportion is higher for females. When considering the proportion of outcomes that are both positive and statistically significant at the 10\% level, we test the hypothesis that the proportions are equal to 10\%.\footnote{Our inference accounts for the dependence across outcomes, as we explain in Section~\ref{sec:combining-functions} and Appendix~\ref{appendix:methodology}. Using an $\alpha$-level of significance, one would expect to find by chance that $\alpha\%$ of the treatment effects are ``statistically significant,'' even if the null hypothesis of no effect of the program is true.} A similar pattern holds for this test as well, although the proportions are smaller. Across outcomes, the effects are stronger for males when comparing treatment to alternative childcare, but are stronger for females when comparing treatment to staying at home. This pattern holds in the individual treatment effects, the combining functions, and the cost/benefit analysis of \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.
 
 We next report estimates of the proportion of beneficial effects by outcome category and overall. This analysis is based on treatment effect \eqref{eq:effect}. Figure~\ref{fig:ppositive} displays the results from this analysis: ABC/CARE positively impacted a large percentage of the outcomes. We show the counts for treatment compared to the next best alternative chosen by parents in Figure~\ref{fig:ppositivenb}. Proportionately more outcomes are beneficial for females, but the proportions are high for both groups and well above the benchmark of $\frac{1}{2}$. In Tables~\ref{table:abccare_rslt_pooled_counts} to \ref{table:abccare_rslt_female_counts_n10a10} of Appendix~\ref{appendix:results}, we document a large and precisely determined fraction of beneficial treatment effects well above $\frac{1}{2}$ for both genders for categories of outcomes spanning the life cycle through the mid 30s. At a 10\% level of significance, $46\%$ are statistically significant for females and $28\%$ for males (see Figure~\ref{fig:ppositive10}).
 
-Figures~\ref{fig:ppositivehome} and~\ref{fig:ppositivealternative} adjust the count measures used to construct Figure~\ref{fig:ppositivenb} to analyze more clearly defined counterfactuals: treatment compared to staying at home and treatment compared to alternative childcare center. These comparisons indicate that males and females benefit differently from alternatives to high-quality treatment. Compared across all categories, females benefit more from treatment when compared to staying at home (as opposed to attending alternative childcare), while males benefit more from treatment when compared to attending an alternative childcare arrangement (as opposed to staying at home).
+Figures~\ref{fig:ppositivehome} and~\ref{fig:ppositivealternative} adjust the count measures used to construct Figure~\ref{fig:ppositivenb} to analyze more clearly defined counterfactuals: treatment compared to staying at home and treatment compared to alternative center childcare. These comparisons indicate that males and females benefit differently from alternatives to high-quality treatment. Compared across all categories, females benefit more from treatment when compared to staying at home (as opposed to attending alternative childcare), while males benefit more from treatment when compared to attending an alternative childcare arrangement (as opposed to staying at home).
 
 \begin{sidewaysfigure}[!htbp]
 \centering
@@ -95,7 +95,7 @@ Figures~\ref{fig:ppositivehome} and~\ref{fig:ppositivealternative} adjust the co
 \end{subfigure}%
 \begin{subfigure}[h]{0.4\textwidth}
 	\centering
-	\caption{Treatment vs. Alternative Preschool} \label{fig:ppositivealternative}
+	\caption{Treatment vs. Alternative Childcare} \label{fig:ppositivealternative}
 		\includegraphics[width=\textwidth]{output/epan_ipw_p1_all.eps}
 \end{subfigure}
 \scriptsize \justify
@@ -115,7 +115,7 @@ We also present estimates of the combining functions by outcome category. Figure
 
 \begin{subfigure}[h]{0.7\textwidth}
 	\centering
-	\caption{Treatment vs. Alternative Preschool, Significant at 10\% Level}
+	\caption{Treatment vs. Alternative Childcare, Significant at 10\% Level}
 		\includegraphics[width=\textwidth]{output/epan_ipw_p1_cats1_sig10.eps}
 \end{subfigure}
 \scriptsize \justify
