--- a/output/abccare-proportion-summary-alt.tex
+++ b/output/abccare-proportion-summary-alt.tex
@@ -8,7 +8,7 @@ IQ & 15 & 0.267 & 0.533 & \textbf{0.267} \\
 Achievement & 12 & 0.250 & \textbf{0.000} & \textbf{-0.250} \\
 Social-Emotional & 22 & \textbf{0.318} & \textbf{0.364} & \textbf{0.045} \\
 Parenting & 7 & 0.429 & 0.286 & -0.143 \\
-Parental Income & 15 & 0.467 & 0.733 & \textbf{0.267} \\
+Parental Labor Income & 15 & 0.467 & 0.733 & \textbf{0.267} \\
 Education & 9 & 0.444 & \textbf{0.111} & \textbf{-0.333} \\
 Employment & 4 & 0.500 & \textbf{0.750} & \textbf{0.250} \\
 Crime & 4 & \textbf{0.000} & \textbf{0.000} & \textbf{0.000} \\
