--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -1,4 +1,4 @@
-We analyze a combined sample of the two closely related programs ABC and CARE. Table~\ref{tab:abc-care-characteristics} summarizes their characteristics. Both interventions were implemented by researchers at the Frank Porter Graham Center at the University of North Carolina Chapel Hill, and targeted children from disadvantaged families in the Chapel Hill area. ABC had four cohorts born between 1972 and 1977, and CARE had two cohorts born between 1978 and 1980. Eligibility was determined on the basis of the High Risk Index (HRI) developed for ABC and adapted for CARE.\footnote{See \citet{Campbell_Wasik_etal_2008_ECRQ}.} Components of the HRI include father's presence, parental employment, and participation in welfare.\footnote{See Appendix~\ref{app:eligibility-pop} for the full list of the determinants of HRI \citep{Ramey_Smith_1977_AJMD, Wasik_Ramey_etal_1990_CD, Ramey_Campbell_1991_childreninpoverty}.}
+We analyze a combined sample of the two closely related programs, ABC and CARE. Table~\ref{tab:abc-care-characteristics} summarizes their characteristics. Both interventions were implemented by researchers at the Frank Porter Graham Center at the University of North Carolina Chapel Hill, and targeted children from disadvantaged families in the Chapel Hill area. ABC had four cohorts born between 1972 and 1977, and CARE had two cohorts born between 1978 and 1980. Eligibility was determined on the basis of the High Risk Index (HRI) developed for ABC and adapted for CARE.\footnote{See \citet{Campbell_Wasik_etal_2008_ECRQ}.} Components of the HRI include father's presence, parental employment, and participation in welfare.\footnote{See Appendix~\ref{app:eligibility-pop} for the full list of the determinants of HRI \citep{Ramey_Smith_1977_AJMD, Wasik_Ramey_etal_1990_CD, Ramey_Campbell_1991_childreninpoverty}.}
 
 Both interventions involved intensive center-based care for subjects in the treatment group starting at 8 weeks and continuing until age 5 before the children started kindergarten. Treatment-group subjects also received daily health screenings and diapers and formula until 6 months. Control-group families received diapers and formula as well for the same period of time.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.}  After school entry up until age 8, there was an additional component of treatment in which home visitors worked with children and their parents to tutor the children and to encourage families to be involved in their child's schooling.\footnote{In ABC, treatment status of this component was randomized. In CARE, all the subjects who received center-based care also received this school-age component.} We do not analyze this part of the treatment because previous work has found no  statistically significant treatment effects of it.\footnote{\citet{Campbell_Ramey_etal_2002_ADS,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.}
 
@@ -39,7 +39,7 @@ Randomization for ABC/CARE was conducted on child pairs matched on family backgr
 
 \subsection{Control Group Substitution}
 
-In ABC/CARE, many control-group subjects (but no treatment-group subjects) attended alternative center-based preschool.\footnote{See \cite{Heckman_Hohmann_etal_2000_QJE} on the issue of substitution bias in social experiments.} The figure is \treatsubsabc\ for ABC and \treatsubscarec\ for CARE. This creates both a problem (substitution bias\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_Hohmann_etal_2000_QJE}, and \cite{Kline_Walters_2016_QJE}.}) and an opportunity (we can compare the effect of an enriched treatment against home and low-quality center environments separately).
+In ABC/CARE, many control-group subjects (but no treatment-group subjects) attended alternative center childcare.\footnote{See \cite{Heckman_Hohmann_etal_2000_QJE} on the issue of substitution bias in social experiments.} The figure is \treatsubsabc\ for ABC and \treatsubscarec\ for CARE. This creates both a problem (substitution bias\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_Hohmann_etal_2000_QJE}, and \cite{Kline_Walters_2016_QJE}.}) and an opportunity (we can compare the effect of an enriched treatment against home and low-quality center environments separately).
 
 \begin{sidewaysfigure}[!htbp]
 \centering
@@ -60,6 +60,6 @@ Note: Panel (a) displays the cumulative distribution function of enrollment in a
 
 Figure~\ref{fig:treatsubcare} shows the cumulative distribution of the proportion of time in the first five years that control subjects were enrolled in alternatives. Figure~\ref{fig:proportion-alt-pre} shows the dynamics of enrollment. Those who enroll generally stay enrolled. As control-group children age, they are more likely to enter childcare (see Appendix~\ref{app:control-subbb}).
 
-Children in the control group who are enrolled in alternative early childcare programs are less economically disadvantaged at baseline compared to children who stay at home. Disadvantage is measured by maternal education, maternal IQ, Apgar scores, and the High Risk Index defining ABC/CARE eligibility. Children who attend low-quality alternative care have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline.\footnote{Statistically significant at 10\%.} Parents of girls are much more likely to use alternative center childcare if assigned to the control group.\footnote{See Table~\ref{table:controlsubscharacteristics} for tests of differences across these variables between children in the control group who attended and who did not attend alternative preschools.} If the subject is a boy, the father is more likely to be present.
+Children in the control group who are enrolled in alternative early childcare programs are less economically disadvantaged at baseline compared to children who stay at home. Disadvantage is measured by maternal education, maternal IQ, Apgar scores, and the High Risk Index defining ABC/CARE eligibility. Children who attend low-quality alternative care have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline.\footnote{Statistically significant at 10\%.} Parents of girls are much more likely to use alternative center childcare if assigned to the control group.\footnote{See Table~\ref{table:controlsubscharacteristics} for tests of differences across these variables between children in the control group who attended and who did not attend alternative childcare.} If the subject is a boy, the father is more likely to be present.
 
 While most of the alternative childcare centers received federal subsidies and were subject to the federal regulations of the era, they were relatively low-quality compared to ABC/CARE.\footnote{Appendix~\ref{appendix:tetanus} discusses the federal standards of that day. See \citet{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach, Burchinal_Campbell_etal_1997_CD}.}$^,$\footnote{When we compare ABC/CARE treatment to these alternatives, ABC/CARE has substantial treatment effects. Further, as we argue below, parents perceived that ABC/CARE was superior to the alternatives.} The access of control-group children to alternative programs affects the interpretation of estimated treatment effects, as we discuss next.
